created another db

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ SECRET_KEY='franco'
 DEBUG=True 
 DB_NAME='reward'
 DB_USER='moringaschool'
-DB_PASSWORD='franco2018'
+DB_PASSWORD='franco'
 DB_HOST='127.0.0.1'
 MODE='dev'
 ALLOWED_HOSTS='*'
